Edit TextView for mast

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,9 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello Develop Branch"
+        android:layout_height="14dp"
+        android:text="Hello  Branch Edited"
         tools:layout_editor_absoluteX="127dp"
-        tools:layout_editor_absoluteY="224dp" />
+        tools:layout_editor_absoluteY="229dp" />
 
 </android.support.constraint.ConstraintLayout>
